# diamond-mind

./: .env.example  .gitignore  ARC.md  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml  readme.md  render.yaml  requirements.txt  start.sh
.github/workflows/: daily-ingestion.yml
app/: __init__.py  config.py  contracts.py  database.py
app/api/: routes.py
app/betting/: analysis_builder.py  backtest.py  edge_calculator.py  f5_model.py  game_analyzer.py  implied_probability.py  nba_model.py  quant.py
app/features/: bullpen_fatigue.py  bullpen_quality.py  bullpen_roles.py  bullpen_vulnerability.py  recent_form.py
app/ingestion/: mlb_stats_api.py  odds_api.py  park_factors.py  venue_coords.py  weather_api.py
app/llm/: claude_client.py
app/models/: __init__.py  bullpen.py  entities.py  games.py  odds.py  players.py  reports.py  tracker.py
app/obsidian/: link_utils.py  note_templates.py  vault_writer.py
app/reports/: daily_report.py
docs/: PROJECT_BRIEF.md  SETUP.md
docs/collab/: README.md
frontend/: DESIGN.md  package-lock.json
frontend/lib/: api.ts  (+1 more)
scripts/: arnav_agent_prompt.md  backfill_history.py  collab.py  collab_poll.py  collab_server.py  init_db.py  run_daily_report.py  run_pregame_update.py
streamlit_app/: dashboard.py
tests/: test_api_aggregates.py  test_api_meta.py  test_backtest.py  test_betting_utils.py  test_bullpen_roles.py  test_bullpen_scoring.py  test_daily_report.py  test_f5_model.py  test_game_analyzer.py  test_ingestion.py  test_models.py  test_nba_model.py  test_obsidian.py  test_quant.py  test_recent_form.py  test_smoke.py
(+33 files in other folders)
